Updated demo files to show shoulder classification

--- a/templates/demo/demo.html
+++ b/templates/demo/demo.html
@@ -25,6 +25,9 @@
       </div>
     </div>
   </div>
+<div>
+    <h1 id="label"></h1>
+</div>
   <div hidden class="control-panel">
   </div>
 </body>
