--- a/templates/demo.html
+++ b/templates/demo.html
@@ -12,6 +12,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.3/control_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3/drawing_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose@0.3.1621277220/pose.js" crossorigin="anonymous"></script>
+    <style>
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position:absolute;
+  top: 50%;
+  left: 45%;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+    </style>
 </head>
 <body style="background-color:#fccc7d;">
 <div class="container">
@@ -19,49 +37,73 @@
     <div class="card shadow text-center" style="margin-top:1em;">
         <img class="card-img-top" width=100 src="{{url_for('static', filename='logo.svg')}}" />
         <div class="card-body" style="background-color:#d5f3ed;">
-            <video hidden class="input_video"></video>
+            <video class="input_video" height="540px" width="960px" hidden></video>
             <div class="loading" hidden>
+
                 <div class="spinner"></div>
                 <div class="message">Loading</div>
             </div>
             <div style="display:inline-block;">
-                <canvas class="output_canvas" width="960px" height="540px"></canvas>
+                <div>
+<!--                    <div class="loader" hidden></div>-->
+                    <canvas class="output_canvas" width="960px" height="540px"></canvas>
+                </div>
                 <select class="form-control form-control-lg" id="pickex" data-style="btn-primary" aria-label="select_exercise" style="margin-top:0.5em;">
                     <option value="shoulderpress" selected>Shoulder Press</option>
+                    <option value="shoulderflexion">Shoulder Flexion</option>
                     <option value="bridge">Bridge</option>
                     <option value="laterallegraise">Lateral Leg Raise</option>
                     <option value="hamstring">Hamstring Stretch</option>
-                    <option value="shoulderflexion">Shoulder Flexion</option>
                 </select>
             </div>
         </div>
     </div>
     <div class="card-group" style="margin-top:1em;margin-bottom:1em;">
         <div class="card shadow text-center">
-            <div class="card-body">
-                <h5 class="card-title">Your position</h5>
-                <p class="card-subtitle" id="label"></p>
+            <div class="card-body align-items-center">
+                <div class="text-xs font-weight-bold text-info text-uppercase"><i class="bi bi-heart"></i>
+                    Motivation</div>
+                <p class="card-subtitle" style="padding:1.5em;" id="message">Welcome to Physifeedback!</p>
             </div>
         </div>
-        <div class="card border-left-info shadow py-2">
+        <div class="card shadow text-center">
             <div class="card-body">
                 <div class="text-xs font-weight-bold text-info text-uppercase"><i class="bi bi-arrows-move"></i>
                     Range of Motion</div>
-                <div class="row no-gutters align-items-center">
+                <div class = "row no-gutters">
+                    <div class="text-uppercase font-weight-bold d-inline-block w-50">Left</div>
+                    <div class="d-inline-block w-50">Average: <span id="avgleftrom"></span></div>
+                </div>
+                <div class = "row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="row no-gutters align-items-center">
                             <div class="col-auto">
-                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">70%</div>
+                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800" id="leftrom2">%</div>
                             </div>
                             <div class="col">
                                 <div class="progress progress-sm mr-2">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-info" role="progressbar" aria-valuemin="0" aria-valuemax="100" id="leftrom"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-auto">
-                        <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                </div>
+                <div class = "row no-gutters">
+                    <div class="text-uppercase font-weight-bold d-inline-block w-50">Right</div>
+                    <div class="d-inline-block w-50">Average: <span id="avgrightrom"></span></div>
+                </div>
+                <div class = "row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col-auto">
+                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800" id="rightrom2">%</div>
+                            </div>
+                            <div class="col">
+                                <div class="progress progress-sm mr-2">
+                                    <div class="progress-bar bg-info" role="progressbar" aria-valuemin="0" aria-valuemax="100" id="rightrom"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -70,13 +112,14 @@
             <div class="card-body">
                 <div class="text-xs font-weight-bold text-info text-uppercase"><i class="bi bi-arrow-repeat"></i>
                     Rep Count</div>
-                <p class="mb-0 mr-3 font-weight-bold text-gray-800 display-2" id="repcount"></p>
+                <p class="mb-0 mr-3 font-weight-bold text-gray-800 display-2" id="repcount">0</p>
             </div>
         </div>
         <div class="card shadow text-center">
             <div class="card-body">
                 <div class="text-xs font-weight-bold text-info text-uppercase"><i class="bi bi-stopwatch"></i> Rep time</div>
-                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">3s</div>
+                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800 display-4" id="reptime">0s</div>
+                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">Average: <span id="avgreptime">0s</span></div>
             </div>
         </div>
     </div>
