Add disclaimer and credit to website for beta

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -124,7 +124,13 @@
             </div>
         </div>
     </div>
+        <div class="card" style="margin-top:1em;margin-bottom:1em;">
+            <p class="card-subtitle" style="padding:1.5em;" id="message">
+            This is a beta. It works best on Chrome on macOS. <br>Make sure you don't have another application running that uses your camera while using this app. Client-side storage has not yet been setup so if you find the metrics are not accurate, try again in a few minutes as someone else may be using it.
+                Any questions and concerns can be sent to <a href="mailto:physifeedback@hadiya.ca">physifeedback@hadiya.ca</a>. Enjoy! <br> (c) Physifeedback 2021.
 
+            </p>
+        </div>
 </div>
 <div>
 </div>
