--- a/templates/demo.html
+++ b/templates/demo.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="card" style="margin-top:1em;margin-bottom:1em;">
-                <p class="card-subtitle" style="padding:1.5em;" id="message">
+                <p class="card-subtitle" style="padding:1.5em;">
                 This is a beta. It works best on Chrome and using HTTPS (not HTTP). <br>Make sure you give browser permission to use your camera and that you don't have another application running that uses your camera while using this app. 
                     Any questions and concerns can be sent to <a href="mailto:physifeedback@hadiya.ca">physifeedback@hadiya.ca</a>. Enjoy! <br> (c) Physifeedback 2021.
     
@@ -70,7 +70,7 @@
                 <div class="card-body align-items-center">
                     <div class="text-xs font-weight-bold text-info text-uppercase"><i class="bi bi-heart"></i>
                         Motivation</div>
-                    <p class="card-subtitle" style="padding:1.5em;" id="message">Welcome to Physifeedback!</p>
+                    <p class="card-subtitle" style="padding:1.5em;" id="message">Welcome to Physifeedback! Here's a demonstration of the chosen exercise:</p>
                     <iframe id="video" allowfullscreen></iframe>
                 </div>
             </div>
