--- a/templates/demo.html
+++ b/templates/demo.html
@@ -48,29 +48,29 @@
                         <div class="loader"></div>
                         <canvas class="output_canvas"></canvas>
                     </div>
-                    <select class="form-control form-control-lg" id="pickex" data-style="btn-primary" aria-label="select_exercise" style="margin-top:0.5em;">
-                        <option selected disabled>Pick an exercise</option>
-                        <option value="shoulderpress">Shoulder Press</option>
-                        <option value="shoulderflexion">Shoulder Flexion</option>
-                        <option value="bridge">Bridge</option>
-                        <option value="laterallegraise">Lateral Leg Raise</option>
-                        <option value="hamstring">Hamstring Stretch</option>
-                    </select>
-                    <div id="selectExerciseOptions" style="display:inline-flex">
-                        <select class="form-control form-control-lg" id="picksets" data-style="btn-primary" style="margin-top:0.5em;margin-right:0.5em;">
-                            <option selected disabled>Pick # of sets</option>
+                    <div id="selectExerciseOptions" style="display:inline-flex;margin-top:0.5em;">
+                        <select class="form-control form-control-lg" id="pickex" data-style="btn-primary" aria-label="select_exercise" style="margin-right:0.5em">
+                            <option value=0 selected disabled>Pick an exercise</option>
+                            <option value="shoulderpress">Shoulder Press</option>
+                            <option value="shoulderflexion">Shoulder Flexion</option>
+                            <option value="bridge">Bridge</option>
+                            <option value="laterallegraise">Lateral Leg Raise</option>
+                            <option value="hamstring">Hamstring Stretch</option>
+                        </select>
+                        <select class="form-control form-control-lg" id="picksets" data-style="btn-primary" style="margin-right:0.5em;">
+                            <option value=0 selected disabled>Pick # of sets</option>
                             <option value=1>1</option>
                             <option value=2>2</option>
                             <option value=3>3</option>
                             <option value=4>4</option>
                             <option value=5>5</option>
                         </select>
-                        <select class="form-control form-control-lg" id="pickreps" data-style="btn-primary" style="margin-top:0.5em;margin-right:0.5em;">
-                            <option selected disabled>Pick # of reps</option>
+                        <select class="form-control form-control-lg" id="pickreps" data-style="btn-primary" style="margin-right:0.5em;">
+                            <option value=0 selected disabled>Pick # of reps</option>
                             <option value=5>5</option>
                             <option value=10>10</option>
                         </select>
-                        <button type="submit" data-bs-toggle="button" id="submitExerciseButton" class="btn btn-primary" style="margin-top:0.5em">Start</button>
+                        <button type="submit" data-bs-toggle="button" id="submitExerciseButton" class="btn btn-primary">Start</button>
                     </div>
                 </div>
             </div>
